--- a/playground/package.json
+++ b/playground/package.json
@@ -1,13 +1,13 @@
 {
   "name": "playground",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "main": "index.js",
   "dependencies": {
-    "h3": "^1.7.1",
-    "valibot": "^0.9.0"
+    "h3": "^1.13.0",
+    "valibot": "^1.0.0-beta.3"
   },
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.6.3"
   }
 }
