feat: init vitest

--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   ],
   "scripts": {
     "build": "unbuild",
+    "dev": "vitest",
     "lint": "eslint .",
     "release": "yarn build && changelogen --patch && git push --follow-tags && yarn publish",
-    "test": "vitest run",
+    "test": "pnpm lint && pnpm test:types && vitest --run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
