--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "8.14.0",
     "changelogen": "^0.5.7",
     "eslint": "^9.14.0",
+    "supertest": "^7.0.0",
     "typescript": "^5.6.3",
     "unbuild": "latest",
     "vite": "5.4.10",
