fix: mark valibot as external

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "validation"
   ],
   "sideEffects": false,
+  "build": {
+    "externals": [
+      "valibot"
+    ]
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
