--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "peerDependencies": {
     "@nuxt/kit": ">=3",
-    "@nuxt/schema": ">=3"
+    "@nuxt/schema": ">=3",
+    "valibot": ">=0.42.0 || >=1"
   },
   "peerDependenciesMeta": {
     "@nuxt/kit": {
@@ -59,7 +60,7 @@
     "@nuxt/kit": "^3.14.1592",
     "@nuxt/schema": "^3.14.1592",
     "h3": "^1.13.0",
-    "valibot": "^1.0.0-beta.9"
+    "valibot": "^0.42.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "3.8.0",
