--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@nuxt/kit": "^3.14.1592",
     "@nuxt/schema": "^3.14.1592",
+    "confbox": "^0.1.8",
     "h3": "^1.13.0",
     "valibot": "^0.42.1"
   },
