--- a/package.json
+++ b/package.json
@@ -57,25 +57,28 @@
     }
   },
   "dependencies": {
-    "@nuxt/kit": "^3.14.1592",
-    "@nuxt/schema": "^3.14.1592",
+    "@nuxt/kit": "^3.15.3",
+    "@nuxt/schema": "^3.15.3",
     "@types/supertest": "^6.0.2",
     "confbox": "^0.1.8",
-    "h3": "^1.13.0",
-    "valibot": "^0.42.1"
+    "h3": "^1.14.0",
+    "valibot": "^1.0.0-beta.14"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "3.8.0",
+    "@antfu/eslint-config": "4.1.0",
     "@types/node": "^20",
     "@types/serve-handler": "6.1.4",
-    "@typescript-eslint/eslint-plugin": "8.14.0",
-    "@typescript-eslint/parser": "8.14.0",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
     "changelogen": "^0.5.7",
-    "eslint": "^9.14.0",
+    "eslint": "^9.19.0",
     "supertest": "^7.0.0",
     "typescript": "^5.6.3",
     "unbuild": "latest",
-    "vite": "5.4.10",
-    "vitest": "^2.1.4"
+    "vite": "6.0.11",
+    "vitest": "^3.0.4"
+  },
+  "overrides": {
+    "typescript": "5.6.3"
   }
 }
